# swagger/swagger.yaml
@@ -537,8 +537,8 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/response.Response'
-        "401":
-          description: Unauthorized
+        "403":
+          description: Forbidden
           schema:
             $ref: '#/definitions/response.Response'
         "404":
